# bfg-sync

./: .gitignore  HISTORY.md  justfile  pyproject.toml
data/bfg_api/: urls.py  views.py
data/common/: application.py  archive.py  bidding.py  bidding_box.py  board.py  cardplay.py  constants.py  contexts.py  images.py  logger.py  models.py  serializers.py  undo_cardplay.py  utilities.py  version.py
data/config/: settings.py  urls.py
src/bfg_sync/: __init__.py  comparison.py  config.py  constants.py  main.py  module_caller.py  remote.py  remote_class.py  root.py  sftp.py  text.py
src/bfg_sync/forms/: frm_config.py  frm_main.py  frm_modal.py
src/psiutils/: _date_picker.py  constants.py  text.py
tests/: test_config.py  test_version.py
tests/test_data/config/: config.toml
